--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello, world!
+<html><head><title>正在跳转</title></head>
+<body>
+<script language='javascript'>document.location = 'https://youtube.com/'</script>
+</body>
+</html>
+
